testsuite/gnatprove/tests/QC05-006__machine_rounding/test.out
test.adb:3:22: error: non-static attribute "Machine_Rounding" is not yet supported
gnatprove: error during flow analysis and proof
