testsuite/gnatprove/tests/QC05-006__machine_rounding/test.adb
procedure Test is
   A : Float := 0.49;
   B : Float := Float'Machine_Rounding (A);

begin
   null;
end Test;
